# bfvm

./: .gitignore  CMakeLists.txt  README.md  bench.sh  compile_flags.txt
C/: Makefile  compile_flags.txt
C++/: Makefile  compile_flags.txt
C++/src/: Compiler.cpp  Compiler.hpp  EntryPoint.cpp  Error.cpp  Error.hpp  Lexer.cpp  Lexer.hpp  Makefile  Platform.hpp  Types.hpp  VirtualMachine.cpp  VirtualMachine.hpp
C++/tests/: broken.b  hello.b  welcome.b
C/src/: Makefile  bfc.c  bfc.h  bfvm.c  bstack.c  bstack.h  error.c  error.h  lexer.c  lexer.h  types.h
Java/: run.sh
Java/src/: BFVM.java  ByteCode.java  Compiler.java  Lexer.java  OpCode.java  Token.java  VirtualMachine.java
Python/src/: vm.py
Rust/: Cargo.toml
Rust/src/: bfc.rs  bfvm.rs  lexer.rs  main.rs
bfc/: CMakeLists.txt  compile_flags.txt
bfc/bfc/: bfc.c  bfc.h  lexer.c  lexer.h
bfc/bfc/core/: error.c  error.h  memory.c  memory.h  platform.h  types.h
bfc/bfc/lexer/: lexer.c  lexer.h
bfvm-c/: Makefile
bfvm-c/src/: Makefile  bfvm.c  bstack.c  bstack.h  error.c  error.h  lexer.c  lexer.h  platform.h  types.h
bfvm-c/src/bfc/: bfc.c  bfc.h  lexer.c  lexer.h
bfvm-cpp/: .gitignore  Makefile  compile_flags.txt
bfvm-cpp/src/: Compiler.cpp  EntryPoint.cpp  Error.cpp  Error.hpp  Lexer.cpp  Lexer.hpp  Makefile  VirtualMachine.cpp  VirtualMachine.hpp
bfvm-cpp/src/Compiler/: Compiler.cpp  Compiler.hpp  Lexer.cpp  Lexer.hpp
bfvm-go/bfvm/: bfvm.go  go.mod  main.go
bfvm-odin/: .gitignore  README.md  main.odin
bfvm-odin/bfvm/: bfvm.odin  error.odin
bfvm-odin/bfvm/bfc/: bfc.odin  debug.odin  lexer.odin
bfvm-odin/src/: bfvm.odin  main.odin
bfvm-odin/src/bfc/: bfc.odin  lexer.odin
bfvm-rs/: .gitignore
bfvm-rs/src/: lib.rs
bfvm-zig/: build.zig  build.zig.zon
bfvm-zig/.zig-cache/o/0af742402b4665000c2f8e47a3e393c4/: bfvm-zig
bfvm-zig/.zig-cache/o/1fb5c989c72eba42136e6cf002a5cff1/: bfvm-zig
bfvm-zig/.zig-cache/o/5d349dbc605d6b23af6c12766d0d2db4/: bfvm-zig
bfvm-zig/.zig-cache/o/695dd29020f5c54b367ab67cd1d76d80/: bfvm-zig
bfvm-zig/.zig-cache/o/794feccd645a68194335b934bf634f4e/: bfvm-zig
bfvm-zig/.zig-cache/o/d46cd0a39d4bbf0db2849fc3936bba0f/: test
bfvm-zig/.zig-cache/o/ebfd933fe13575f7f68095d22599a6be/: test
bfvm-zig/src/: main.zig
python/src/: bfc.py  bfvm.py  lex.py  main.py  virtual_machine.py  vm.py
python/src/bfc/: __init__.py  bfc.py  lexer.py
rust/src/: bfc.rs  bfvm.rs  err.rs  error.rs  lex.rs  lexer.rs  lib.rs  main.rs  prelude.rs
rust/src/bfc/: lexer.rs  mod.rs
rust/src/bfc/lexer/: mod.rs  token.rs
src/: CMakeLists.txt  main.c
src/core/: error.c  error.h  memory.c  memory.h  platform.h  types.h
src/vm/: bfvm.c  bfvm.h
tests/: curse.b  nested.b  sierpinski.b
